# QuantR

./: .env  LICENSE  Q_lang  examples.ipynb  index.html  pypi_diagnostic.py  pyproject.toml  readme.md  setup.py  setup_process.py
QuantResearch/: __init__.py  backtest_engine.py  dashboard.py  indicators.py  visualize.py
QuantResearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
