[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantResearch"
version = "0.0.2"
description = "Technical indicators and visualization tools for quantitative research"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Vinayak Shinde", email = "vinayak.r.shinde.1729@gmail.com"}
    {name = "Vishal Mishra", email = "vishal214.mishra@gmail.com"}
]
keywords = ["finance", "trading", "technical-analysis", "indicators", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "yfinance>=0.2.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/vinayak1729-web/QuantR"
Repository = "https://github.com/vinayak1729-web/QuantR"
Issues = "https://github.com/vinayak1729-web/QuantR/issues"
Documentation = "https://github.com/vinayak1729-web/QuantR#readme"

[tool.setuptools]
packages = ["QuantResearch"]

[tool.setuptools.package-data]
QuantResearch = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

update this