[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantResearch"
version = "0.0.3"
description = "Technical indicators and visualization tools for quantitative research"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
    { name = "Vinayak Shinde", email = "vinayak.r.shinde.1729@gmail.com" },
    { name = "Vishal Mishra",  email = "vishal214.mishra@gmail.com" },
]

keywords = [
    "finance", "trading", "technical-analysis",
    "indicators", "quantitative", "stocks", "yfinance"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "yfinance>=0.2.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
    "tkcalendar>=1.6.1",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/vinayak1729-web/QuantR"
Repository = "https://github.com/vinayak1729-web/QuantR"
Issues = "https://github.com/vinayak1729-web/QuantR/issues"
Documentation = "https://github.com/vinayak1729-web/QuantR#readme"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"QuantResearch" = ["py.typed"]